Fix: renamed href attributes to data-href for all ajax-cart-links. The route 'AddProductVariantToCart > GET' does not exist.

--- a/src/Presentation/SmartStore.Web/Views/Catalog/CompareProductsButton.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CompareProductsButton.cshtml
@@ -2,7 +2,8 @@
 @using SmartStore.Web.Models.Catalog;
 <div>
     <a class="ajax-cart-link"
-        href="@Url.RouteUrl("AddProductToCompare", new { productId = Model.ProductId })"
+        href="#"
+        data-href="@Url.RouteUrl("AddProductToCompare", new { productId = Model.ProductId })"
         data-type="compare"
         data-action="add">
         <i class="icon-retweet"></i>
