--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
@@ -55,7 +55,8 @@
                         @item.UnitPrice
                     </div>
                     <a class="remove ajax-cart-link" 
-                        href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })' 
+                        href="#"
+                        data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })' 
                         data-name="@item.ProductName"
                         data-type="cart"
                         data-action="remove" 
