--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantAddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantAddToCart.cshtml
@@ -114,7 +114,8 @@
                 @if (!Model.AddToCart.DisableBuyButton)
                 {
                     <a class="btn btn-warning add-to-cart-button ajax-cart-link" 
-                        href='@Url.RouteUrl("AddProductVariantToCart", new { productVariantId = Model.AddToCart.ProductVariantId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })' 
+                        href="#"
+                        data-href='@Url.RouteUrl("AddProductVariantToCart", new { productVariantId = Model.AddToCart.ProductVariantId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })' 
                         data-form-selector="#product-details-form"
                         data-type="cart"
                         data-action="add">
