--- a/src/Presentation/SmartStore.Web/Administration/Views/Language/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Language/_CreateOrUpdate.cshtml
@@ -11,7 +11,7 @@
     x.Add().Text(T("Admin.Configuration.Languages.Stores").Text).Content(TabStores());
 
     //generate an event
-    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "language-edit"));
+	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "language-edit", this.Html, this.Model));
 })
 
 @helper TabInfo()
