--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/_CreateOrUpdate.cshtml
@@ -13,7 +13,7 @@
     x.Add().Text(T("Admin.ContentManagement.MessageTemplates.Stores").Text).Content(TabStores());
 
     //generate an event
-    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "template-edit"));
+	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "template-edit", this.Html, this.Model));
 })
 @helper TabInfo()
 {
