--- a/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
@@ -12,7 +12,7 @@
     x.Add().Text(T("Admin.ContentManagement.News.NewsItems.Stores").Text).Content(TabStores());
 
     //generate an event
-    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "news-edit"));
+	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "news-edit", this.Html, this.Model));
 })
 @helper TabInfo()
 {
