Issue 19 - Paginator isn't working when using the product filter

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1983,6 +1983,7 @@ table.cart .cart-item-row .qty-input {
 	line-height: normal;
 }
 .product-filter-block .data .filter-item {
+    clear: both;
     padding-left: 14px;
 }
 .product-filter-block .data .filter-item a {
