Plugin list: Link to update language resources for a plugin

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1119,7 +1119,7 @@ table.order-edit td {
 	td.cell-data .plugin-actions {
 		margin-top: 6px;
 		[class^="icon-"] { color: #bbb }
-		.plugin-edit { margin-right: 10px }
+		.plugin-action-link { display: inline-block; margin-right: 10px }
 	}
 	td.cell-install {
 		width: 40%;
