--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductVariant/EditorTemplates/TierPriceStore.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductVariant/EditorTemplates/TierPriceStore.cshtml
@@ -3,7 +3,7 @@
     name="Store" 
     id="Store" 
     style="width: 95%"
-    data-placeholder='@T("Admin.Catalog.Products.Variants.TierPrices.Fields.Store.All")'
+    data-placeholder='@T("Admin.Common.StoresAll")'
     data-select-url='@Url.Action("AllStores", "Store")'>
 </select>
 
