--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/List.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Telerik.Web.Mvc.UI
 @{
     //page title
-    ViewBag.Title = T("Admin.Configuration.Stores").Text;
+	ViewBag.Title = T("Admin.Common.Stores").Text;
 }
 <div class="section-header">
     <div class="title">
 		<i class="icon icon-shopping-cart"></i>
-        @T("Admin.Configuration.Stores")
+        @T("Admin.Common.Stores")
     </div>
     <div class="options">
 		<a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus icon-white"></i>&nbsp;@T("Admin.Common.AddNew")</a>
