--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -9,7 +9,7 @@
 	x.Add().Text(T("Admin.Catalog.Categories.Products").Text).Content(TabProducts());
 	x.Add().Text(T("Admin.Catalog.Categories.Discounts").Text).Content(TabDiscounts());
 	x.Add().Text(T("Admin.Catalog.Categories.Acl").Text).Content(TabAcl());
-	x.Add().Text(T("Admin.Catalog.Categories.Stores").Text).Content(TabStores());
+	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
 
 	//generate an event
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "category-edit", this.Html, this.Model));
