--- a/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/_CreateOrUpdate.cshtml
@@ -8,8 +8,8 @@
 
 @Html.SmartStore().TabStrip().Name("news-edit").Style(TabsStyle.Tabs).Position(TabsPosition.Top).Items(x =>
 {
-    x.Add().Text(T("Admin.ContentManagement.News.NewsItems.Info").Text).Content(TabInfo()).Selected(true);
-    x.Add().Text(T("Admin.ContentManagement.News.NewsItems.Stores").Text).Content(TabStores());
+	x.Add().Text(T("Admin.Common.Info").Text).Content(TabInfo()).Selected(true);
+	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
 
     //generate an event
 	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "news-edit", this.Html, this.Model));
