--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/_CreateOrUpdatePlugin.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/_CreateOrUpdatePlugin.cshtml
@@ -17,7 +17,7 @@
 @Html.SmartStore().TabStrip().Name("plugin-edit").Style(TabsStyle.Tabs).Position(TabsPosition.Top).Items(x =>
 {
 	x.Add().Text(T("Admin.Configuration.Plugins.Info").Text).Content(TabInfo()).Selected(true);
-	x.Add().Text(T("Admin.Configuration.Plugins.Stores").Text).Content(TabStores());
+	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
 
     //generate an event
 	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "plugin-edit", this.Html, this.Model));
