--- a/src/Presentation/SmartStore.Web/Administration/Views/Language/Resources.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Language/Resources.cshtml
@@ -34,7 +34,10 @@
 <table class="adminContent">
     <tr>
         <td>
-            @T("Admin.Configuration.Languages.Resources.Description")
+            <div class="alert alert-info fade in">
+                @T("Admin.Configuration.Languages.Resources.Description")
+                <button class="close" data-dismiss="alert">x</button>
+            </div>          
         </td>
     </tr>
     <tr>
