--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
@@ -39,10 +39,10 @@
                     .Name("topics-grid")
                     .Columns(columns =>
                     {
-						columns.Bound(x => x.SystemName)
-							.Width(200)
-							.Template(x => Html.ActionLink(x.SystemName, "Edit", new { id = x.Id }))
-							.ClientTemplate("<a href=\"Edit/<#= Id #>'><#SystemName#></a>");
+                        columns.Bound(x => x.SystemName)
+                            .Width(200)
+                            .Template(x => Html.ActionLink(x.SystemName, "Edit", new { id = x.Id }))
+							.ClientTemplate("<a href='Edit/<#= Id #>'><#= SystemName #></a>");
                         columns.Bound(x => x.IsPasswordProtected)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.IsPasswordProtected))
