--- a/src/Presentation/SmartStore.Web/Administration/Views/CustomerRole/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/CustomerRole/List.cshtml
@@ -24,7 +24,7 @@
                     {
                         columns.Bound(x => x.Name).Width(150)
                              .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>'><#= Name #></a>");
+                            .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
                         columns.Bound(x => x.FreeShipping)
                             .Width(100)
                             .Centered()
