--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -43,7 +43,7 @@
                     {
                         columns.Bound(x => x.Name).Width(300)
                             .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\'Edit/<#= Id #>'><#= Name #></a>");
+                            .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
                         
                             // .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
                             //.ClientTemplate("<a href=\"Edit/<#= Id #>'><#= Name #></a>");
