--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
@@ -42,7 +42,7 @@
 					columns.Bound(x => x.Name)
 						.Width(350)
 						.Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-						.ClientTemplate("<a href=\"Edit/<#= Id #>'><#Name#></a>");
+						.ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
 					columns.Bound(x => x.Subject);
 					columns.Bound(x => x.IsActive)
 						.Template(item => @Html.SymbolForBool(item.IsActive))
