--- a/src/Presentation/SmartStore.Web/Administration/Views/Poll/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Poll/List.cshtml
@@ -28,7 +28,7 @@
                             .Width(350)
                             .Centered()
                             .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>'><#Name#></a>");
+                            .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
                         columns.Bound(x => x.LanguageName)
                              .Width(150);
                         columns.Bound(x => x.DisplayOrder)
