--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
@@ -10,7 +10,7 @@
         @T("Admin.ContentManagement.Topics")
     </div>
     <div class="options">
-        <a href="@Url.Action("Create")" class="btn"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
     </div>
 </div>
 <table width="100%">
@@ -42,7 +42,7 @@
 						columns.Bound(x => x.SystemName)
 							.Width(200)
 							.Template(x => Html.ActionLink(x.SystemName, "Edit", new { id = x.Id }))
-							.ClientTemplate("<a href=\"Edit/<#= Id #>'><#SystemName#></a>");
+							.ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= SystemName #></a>");
                         columns.Bound(x => x.IsPasswordProtected)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.IsPasswordProtected))
