Multi-store configuration for trusted shops seal plugin

--- a/src/Plugins/Widgets.TrustedShopsSeal/Views/TrustedShopsSeal/Configure.cshtml
+++ b/src/Plugins/Widgets.TrustedShopsSeal/Views/TrustedShopsSeal/Configure.cshtml
@@ -3,22 +3,24 @@
 }
 @model SmartStore.Plugin.Widgets.TrustedShopsSeal.Models.ConfigurationModel
 @using SmartStore.Web.Framework;
+
+<div class="alert alert-info">
+    @Html.Raw(@T("Plugins.Widgets.TrustedShopsSeal.AdminInstruction"))
+</div>
+
+@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 	
 @using (Html.BeginForm())
-{
-    
-    <div class="alert alert-info">
-        @Html.Raw(@T("Plugins.Widgets.TrustedShopsSeal.AdminInstruction"))
-    </div>
-    
+{    
 <table class="adminContent">
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.ZoneId)
+            @Html.SmartLabelFor(model => model.WidgetZone)
         </td>
         <td class="adminData">
-            @Html.DropDownListFor(model => model.ZoneId, Model.AvailableZones)
-            @Html.ValidationMessageFor(model => model.ZoneId)
+			@Html.SettingOverrideCheckbox(model => model.WidgetZone)
+            @Html.DropDownListFor(model => model.WidgetZone, Model.AvailableZones)
+            @Html.ValidationMessageFor(model => model.WidgetZone)
         </td>
     </tr>
     <tr>
@@ -26,7 +28,7 @@
             @Html.SmartLabelFor(model => model.TrustedShopsId)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.TrustedShopsId)
+            @Html.SettingEditorFor(model => model.TrustedShopsId)
             @Html.ValidationMessageFor(model => model.TrustedShopsId)
         </td>
     </tr>
@@ -35,7 +37,7 @@
             @Html.SmartLabelFor(model => model.IsTestMode)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.IsTestMode)
+            @Html.SettingEditorFor(model => model.IsTestMode)
             @Html.ValidationMessageFor(model => model.IsTestMode)
         </td>
     </tr>
@@ -45,7 +47,7 @@
             @Html.SmartLabelFor(model => model.ShopName)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.ShopName)
+            @Html.SettingEditorFor(model => model.ShopName)
             @Html.ValidationMessageFor(model => model.ShopName)
         </td>
     </tr>
@@ -54,7 +56,7 @@
             @Html.SmartLabelFor(model => model.ShopText)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.ShopText)
+            @Html.SettingEditorFor(model => model.ShopText)
             @Html.ValidationMessageFor(model => model.ShopText)
         </td>
     </tr>
@@ -63,7 +65,7 @@
         <td>&nbsp;</td>
         <td style="padding:10px 0">
             <button type="submit" name="save" value="save" class="btn btn-primary">
-                @T("Admin.Common.Save")
+				<i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
             </button>
         </td>
     </tr>
