--- a/src/Plugins/Widgets.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
+++ b/src/Plugins/Widgets.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
@@ -65,7 +65,7 @@
         <td>&nbsp;</td>
         <td style="padding:10px 0">
             <button type="submit" name="save" value="save" class="btn btn-primary">
-                @T("Admin.Common.Save")
+                <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
             </button>
         </td>
     </tr>
