--- a/src/Presentation/SmartStore.Web/Views/Shared/BsImageDialog.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/BsImageDialog.cshtml
@@ -7,13 +7,19 @@
     <div class="modal-body"><div class="modal-image"></div></div>
     <div class="modal-footer">
         <div class="btn-group pull-left">
-            <a class="btn modal-play modal-slideshow pull-left" data-slideshow="2000"><i class="icon-play icon-white"></i> Slideshow</a>
-            <a class="btn modal-download pull-left" target="_blank"><i class="icon-download"></i> Download</a>
+            <a class="btn modal-play modal-slideshow pull-left" data-slideshow="2000">
+                <i class="icon-play"></i>
+                Slideshow
+            </a>
+            <a class="btn modal-download pull-left" href="#" target="_blank">
+                <i class="icon-download"></i>
+                Download
+            </a>
         </div>
 
         <div class="btn-group pull-right">
-            <a class="btn x-btn-info modal-prev" title="Previous"><i class="icon-arrow-left icon-white"></i></a>
-            <a class="btn x-btn-info modal-next" title="Next"><i class="icon-arrow-right icon-white"></i></a>
+            <a class="btn modal-prev" title="Previous"><i class="icon-arrow-left"></i></a>
+            <a class="btn modal-next" title="Next"><i class="icon-arrow-right"></i></a>
         </div>
     </div>
 </div>
