--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/EstimateShipping.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/EstimateShipping.cshtml
@@ -108,7 +108,7 @@
             </div>
         </div>
 
-        <div class="well well-small">
+        <div class="well well-small hide"> <!-- TODO: (mc) temporarily hidden, wrong resource key! -->
             @Html.Raw(String.Format(T("ShoppingCart.ShippingInfoLink"), Url.RouteUrl("Topic", new { SystemName = "shippinginfo" })))
         </div>
     </div>
